# vlc

./: .gitignore  RPICHANGES  configure.ac
contrib/src/upnp/: rules.mak
include/: vlc_aout.h  vlc_codec.h  vlc_common.h  vlc_fourcc.h  vlc_objects.h  vlc_opengl.h  vlc_picture.h  vlc_vout_display.h  vlc_vout_window.h  vlc_window.h
modules/: Makefile.am
modules/access/: srt.c
modules/access/http/: message.c
modules/access_output/: srt.c
modules/audio_filter/channel_mixer/: simple.c
modules/audio_filter/converter/: tospdif.c
modules/audio_output/: alsa.c  pulse.c
modules/codec/: Makefile.am
modules/codec/avcodec/: avcodec.c  avcodec.h  avcommon.h  chroma.c  drm_pic.c  drm_pic.h  drm_prime.c  drm_prime.h  va.c  video.c
modules/demux/mkv/: matroska_segment.cpp  mkv.cpp
modules/gui/qt/: qt.cpp
modules/gui/qt/components/: controller.cpp  interface_widgets.cpp  interface_widgets.hpp
modules/gui/qt/medialibrary/: mlrecentsvideomodel.hpp
modules/gui/qt/player/qml/: MiniPlayer.qml
modules/gui/qt/player/qml/controlbarcontrols/: MenuButton.qml
modules/hw/drm/: Makefile.am  conv_sand30.c  drm_av_deinterlace.c  drm_avcodec.c  drm_gl_conv.c  drm_pic.h  drm_vout.c  drmu_vlc.c
modules/hw/drmprime/: Makefile.am  deinterlace.c
modules/hw/mmal/: Makefile.am  blend_rgba_neon.S  blend_rgba_neon.h  blend_test.c  codec.c  converter.c  converter_mmal.c  deinterlace.c  drm_vout.c  drmu.c  drmu.h  drmu_atomic.c  drmu_int.h  drmu_log.h  drmu_vlc.c  drmu_vlc.h  drmu_vlc_cma.c  drmu_vlc_cma.h  drmu_xlease.c  mmal_avcodec.c  mmal_cma.c  mmal_cma.h  mmal_cma_drmprime.c  mmal_cma_drmprime.h  mmal_cma_int.h  mmal_cma_pic.h  mmal_gl.h  mmal_piccpy_neon.S  mmal_picture.c  mmal_picture.h  pollqueue.c  pollqueue.h  rpi_prof.h  subpic.c  subpic.h  transform_ops.h  v7_pmu.S  v7_pmu.h  vout.c  xsplitter.c
modules/packetizer/: mlp.c
modules/video_chroma/: chain.c
modules/video_output/: Makefile.am  caca.c
modules/video_output/drm/: Makefile.am  drm_vout.c  drmu.c  drmu_int.h  drmu_vlc.c  drmu_vlc_cma.c  drmu_vlc_cma.h
modules/video_output/drmu/: Makefile.am  drm_vout.c  drmu.c  drmu.h  drmu_output.c  drmu_vlc.c  drmu_vlc_fmts.c  drmu_vlc_fmts.h  drmu_xlease.c  pollqueue.c  pollqueue.h
modules/video_output/opengl/: display.c  egl.c  gl_util.c  interop.c  interop_drm_prime.c  renderer.h  sampler.c  vout_helper.c
modules/video_output/wayland/: dmabuf.c  dmabuf_alloc.c  picpool.c  picpool.h  rgba_premul.S  rgba_premul.c  rgba_premul.h  rgba_premul_aarch64.S  rgba_premul_aarch64.h  shm.c  weak_link.c  weak_link.h  wl_dmabuf.c  wl_xdg_shell.c  xdg-shell.c
modules/video_output/xcb/: xvideo.c
pi-util/: BUILD.txt  README.txt  conf.sh  conf_native.sh  cplibs.sh  defargs_armv6.gn  defargs_armv7.gn  dodiff.py  genpatch.sh  gitscan.py  gngen.py  host-install-dev.sh  mmvlc.sh  pi-install-bullseye-dev.sh  pi-install-dev.sh  pipaths.py  rebase_liblinks.py  settag.py  syncroot.sh
src/: libvlccore.sym  revision.c  revision.txt
src/audio_output/: dec.c  output.c
src/input/: decoder.c  decoder_helpers.c  es_out.c  input_internal.h
src/misc/: fourcc.c  picture.c
src/playlist/: thread.c
src/video_output/: display.c  opengl.c  video_output.c  window.c
