# Build arguments go here. Examples:
#   is_component_build = true
#   is_debug = false
# See "gn args <out_dir> --list" for available build arguments.
is_debug = false
target_cpu = "arm"
target_os = "linux"

arm_float_abi = "hard"
arm_use_neon = true
arm_optionally_use_neon = false
arm_version = 7
arm_arch = "armv7-a"

# Pulse deprecated on Pi
use_pulseaudio = false

is_component_ffmpeg = true
# tcmalloc doesn't like armv6 by default
use_allocator = "none"
ffmpeg_branding = "Chrome"
proprietary_codecs = true
